--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1 style="color:#090600;">Hi! <br>I'm Abdullah</h1>
-						   					<h2  style="color:#191818;">I am currently working as a data engineer (DE) at Xref/TSS.</h2>
+						   					<h2  style="color:#191818;">I am currently working as a senior data engineer (DE) at Telenor.</h2>
 											</div>
 					   				</div>
 					   			</div>
@@ -134,7 +134,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Abdullah.</strong> I am a Data Engineer at Xref and Telenor Shared Services. </p>
+										<p><strong>Hi I'm Abdullah.</strong> I am a Data Engineer at Telenor Shared Services. </p>
 										<p>As a Data Engineer, 
 											I have a passion for turning data into actionable insights 
 											and building scalable data solutions. With hands-on experience 
